PAC3 correccions Tailwind config

--- a/src/index.html
+++ b/src/index.html
@@ -27,15 +27,15 @@
       <main class="">
         <!-- CSS GRID POSTER -->
         <section class="relative md:grid md:grid-rows-layout md:grid-cols-layout md:z-0 xl:max-w-screen-xl xl:mx-auto">
-          <h1 class="text-secondary text-left pt-12 pb-4 px-near-10 mb-2 text-5xl leading-near-relaxed font-bold md:z-10 md:max-w-xl md:row-start-1 md:row-end-2 md:col-start-3 md:col-end-6 md:justify-self-end md:m-0 md:py-4 md:pr-near-10 md:pl-18 md:text-7xl lg:max-w-2xl lg:row-start-2 lg:row-end-3 lg:col-start-3 lg:col-end-5 lg:pt-0 lg:text-8xl 2xl:max-w-3xl 2xl:text-9xl">
+          <h1 class="text-secondary text-left pt-12 pb-4 px-46/5 mb-2 text-9xl leading-loose font-bold md:z-10 md:max-w-xl md:row-start-1 md:row-end-2 md:col-start-3 md:col-end-6 md:justify-self-end md:m-0 md:py-4 md:pr-46/5 md:pl-86/5 md:text-11xl lg:max-w-2xl lg:row-start-2 lg:row-end-3 lg:col-start-3 lg:col-end-5 lg:pt-0 lg:text-12xl 2xl:max-w-4xl 2xl:text-13xl">
             Three Of Us, a magical mistery trip
           </h1>
 
-          <h2 class="text-black text-3xl mb-near-3.5 px-near-10 py-0 font-semibold md:row-start-1 md:row-end-neg-1 md:col-start-6 md:col-end-7 md:writing-mode-vertical md:mt-4 md:p-0">
+          <h2 class="text-black text-4xl mb-16/5 px-46/5 py-0 font-semibold md:row-start-1 md:row-end-neg-1 md:col-start-6 md:col-end-7 md:writing-mode-vertical md:mt-4 md:p-0">
             Tribute band
           </h2>
 
-          <p class="text-xl leading-near-relaxed py-0 px-near-10 mb-near-3.5 md:row-start-2 md:-row-end-3 md:col-start-4 md:col-end-6 md:pt-32 md:pr-0 md:pl-12 md:text-base md:leading-near-normal lg:row-start-3 lg:row-end-neg-4 lg:col-start-4 lg:col-end-6 lg:pt-0 lg:text-lg lg:leading-near-normal 2xl:text-xl">
+          <p class="text-xl leading-loose py-0 px-46/5 mb-16/5 md:row-start-2 md:-row-end-3 md:col-start-4 md:col-end-6 md:pt-32 md:pr-0 md:pl-12 md:text-base md:leading-normal lg:row-start-3 lg:row-end-neg-4 lg:col-start-4 lg:col-end-6 lg:pt-0 lg:text-lg lg:leading-normal 2xl:text-xl">
             Un fabulós recorregut per l’extraordinari univers dels quatre genis de
             Liverpool. Junts ens submergirem en la seva inconfusible proposta musical que
             travessa i fusiona estils i vanguardes i fruirem plegats amb les seves harmonies
@@ -43,9 +43,9 @@
             sonoritats i ritmes impensables.
           </p>
 
-          <hr class="w-near-12 border-t-3 border-primary border-solid mt-0 mr-0 mb-near-1.5 ml-near-10 md:row-start-4 md:-row-end-5 md:col-start-5 md:col-end-6 md:self-end md:justify-self-end md:mr-36 md:mb-12">
+          <hr class="w-58/5 border-t-3 border-primary border-solid mt-0 mr-0 mb-6/5 ml-46/5 md:row-start-4 md:-row-end-5 md:col-start-5 md:col-end-6 md:self-end md:justify-self-end md:mr-36 md:mb-12">
 
-          <a class="text-black text-xl font-semibold no-underline block mb-12 py-0 px-near-10 md:row-start-4 md:-row-end-5 md:col-start-5 md:col-end-6 md:self-end md:justify-self-end md:mb-0 md:pt-near-3.5" href="#" >Llegir més...</a>
+          <a class="text-black text-xl font-semibold no-underline block mb-12 py-0 px-46/5 md:row-start-4 md:-row-end-5 md:col-start-5 md:col-end-6 md:self-end md:justify-self-end md:mb-0 md:pt-16/5" href="#" >Llegir més...</a>
 
           <picture class="md:row-start-1 md:row-end-5 md:col-start-1 md:col-end-4">
             <source media="(min-width: 768px)" srcset="assets/images/foto-general-home-1030w.jpg?as=webp" type="image/webp">
