--- a/src/membres.html
+++ b/src/membres.html
@@ -25,12 +25,12 @@
       <include src="./views/header.html"></include>
 
       <main class="2xl:max-w-screen-xl 2xl:mx-auto">
-        <h1 class="text-secondary text-center mb-4 pt-12 pb-4 px-12 text-5xl leading-near-tight font-bold">
+        <h1 class="text-secondary text-center mb-4 pt-12 pb-4 px-12 text-9xl leading-tight font-bold">
           Membres de la banda
         </h1>
 
         <!-- CSS FLEX MEMBERS CONTAINER & BOOTSTRAP COLLAPSE COMPONENT-->
-        <section class="flex flex-col px-12 md:px-near-7 md:flex-row md:justify-between md:gap-x-8">
+        <section class="flex flex-col px-12 md:px-36/5 md:flex-row md:justify-between md:gap-x-8">
           <include src="./views/components/albert.html"></include>
           <include src="./views/components/xavi.html"></include>
           <include src="./views/components/carles.html"></include>
